--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,22 @@
 **/.vs
 **/lib
 **/.vscode
+# sbt specific
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+project/local-plugins.sbt
+.history
+.ensime
+.ensime_cache/
+.sbt-scripted/
+local.sbt
+.bsp
+# Metals
+.metals
+.bloop/
+.metals/
+metals.sbt
